2011-08-25  BVK Chaitanya  <bvk.groups@gmail.com>

	* gentpl.py: Use Autogen macros so that the output template file
	(Makefile.tpl) size is reduced.

2011-09-29  Mads Kiilerich <mads@kiilerich.com>

	* grub-core/Makefile.core.def (kernel): Add kern/i386/int.S to
	extra_dist.

2011-09-29  Mario Limonciello <mario_limonciello@dell.com>

	* util/misc.c (grub_util_get_disk_size) [__MINGW32__]: Strip trailing
	slashes on PHYSICALDRIVE%d paths when making Windows CreateFile calls.

2011-09-29  Mario Limonciello <mario_limonciello@dell.com>

	* grub-core/kern/emu/misc.c (canonicalize_file_name) [__MINGW32__]: Use
	_fullpath.

2011-09-29  Mario Limonciello <mario_limonciello@dell.com>

	Remove extra declaration of sleep for mingw32.

	* util/misc.c (sleep) [__MINGW32__]: Removed.
	* include/grub/util/misc.h (sleep) [__MINGW32__]: Likewise.

2011-09-28  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* include/grub/bsdlabel.h (grub_partition_bsd_disk_label): Add fields
	type and packname.
	* include/grub/i386/netbsd_bootinfo.h (NETBSD_BTINFO_BOOTDISK):
	Resurrected.
	(NETBSD_BTINFO_BOOTWEDGE): New definition.
	(grub_netbsd_btinfo_bootwedge): New struct.
	* grub-core/loader/i386/bsd.c (grub_netbsd_add_boot_disk_and_wedge):
	New function.
	(grub_cmd_netbsd): Call grub_netbsd_add_boot_disk_and_wedge.

2011-09-28  Thomas Haller <thomas.haller@fen-net.de>

	* grub-core/loader/multiboot_elfxx.c (Elf_Shdr): Set according to
	loader.

2011-09-28  Andreas Born  <futur.andy@googlemail.com>

	Fix incorrect identifiers in bash-completion.

	* util/bash-completion.d/grub-completion.bash.in
	(_grub_mkpasswd-pbkdf2): Rename to ...
	(_grub_mkpasswd_pbkdf2): ... this. All users updated.
	(_grub_script-check): Rename to ...
	(_grub_script_check): ... this. All users updated.

2011-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_is_floppy):
	Return 0 if disk isn't biosdisk.

2011-09-17  Grégoire Sutre  <gregoire.sutre@gmail.com>
